Tidied up HTML titles

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Webpack-dev-server in root</title>
+    <title>React FixedDataTable test/title>
     <meta name="viewport" content="user-scalable=1, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="node_modules/fixed-data-table/dist/fixed-data-table.css" />
   </head>
   <body>
-    Test 1 in root
+    React FixedDataTable test
     <div id="main"></div>
     <!-- <script src="http://localhost:8080/webpack-dev-server.js"></script> -->
     <!-- <script src="js/vendor.js"></script> -->
