--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React FixedDataTable test/title>
+    <title>React FixedDataTable test</title>
     <meta name="viewport" content="user-scalable=1, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="node_modules/fixed-data-table/dist/fixed-data-table.css" />
   </head>
