--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     React FixedDataTable test
     <div id="main"></div>
     <!-- <script src="http://localhost:8080/webpack-dev-server.js"></script> -->
-    <!-- <script src="js/vendor.js"></script> -->
+    <script src="js/vendor.js"></script>
     <script src="js/bundle.js"></script>
   </body>
 </html>
